changes: - added view for projects - added store module for permissions

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,11 +2,17 @@
     "base": {
         "username": "Username"
     },
+    "nav": {
+        "projects": "Projects"
+    },
     "auth": {
         "login": "Login",
         "email": "Email",
         "password": "Password",
         "logout": "Logout",
         "signup": "Create Account"
+    },
+    "projects": {
+        "create": "Create Project"
     }
 }
