changes: - fixed nav menu layout - added profile page - added link to own profile to nav - added store module for profile - added store module for current player - added button for bugreport creation - added datetime formats for i18n - updated template of locale changer - added missing language strings for german - added languge strings for profile page and nav - updated getter of login-status - added getter to permissions for reactive rendering

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -1,12 +1,43 @@
 {
-    "base": {
-        "username": "Nutzername"
+    "dict":{
+        "base": {
+            "greeting": "Hallo {name}!",
+            "report_bug": "Einen Fehler melden"
+        },
+        "nav": {
+            "projects": "Projekte",
+            "home": "Start",
+            "profile": "Profil"
+        },
+        "auth": {
+            "login": "Anmelden",
+            "email": "Email",
+            "password": "Passwort",
+            "logout": "Abmelden",
+            "signup": "Konto erstellen"
+        },
+        "profile": {
+            "title": "{name}s Profil",
+            "username": "Nutzername",
+            "member_since": "Mitglied seit {date}"
+        },
+        "projects": {
+            "create": "Neues Projekt anlegen"
+        }
     },
-    "auth": {
-        "login": "Anmelden",
-        "email": "Email",
-        "password": "Passwort",
-        "logout": "Abmelden",
-        "signup": "Konto erstellen"
+    "dateTimeFormat": {
+        "short": {
+          "year": "numeric",
+          "month": "long",
+          "day": "numeric"
+        },
+        "long": {
+          "year": "numeric",
+          "month": "long",
+          "day": "numeric",
+          "weekday": "long",
+          "hour": "numeric",
+          "minute": "numeric"
+        }
     }
 }
