changes: - implemented component for secret inputs like passwords - added translation-strings for various password inputs - implemented conditional passwort management to profile view - fixed a bug where profiles where not loaded upon navigation

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -13,6 +13,10 @@
             "login": "Anmelden",
             "email": "Email",
             "password": "Passwort",
+            "current_password": "Aktuell verwendetes passwort",
+            "new_password": "Neues Passwort",
+            "confirm_password": "Passwort bestätigen",
+            "update_password": "Passwort aktualisieren",
             "logout": "Abmelden",
             "signup": "Konto erstellen"
         },
