changes: - removed page-layout on app router view - created projects store module - implemented lazy loading for projects - implemnted project creator component

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,7 +34,9 @@
             "member_since": "Joined {date}"
         },
         "projects": {
-            "create": "Create new project"
+            "create": "Create project",
+            "name": "project name",
+            "description": "project description"
         }
     },
     "dateTimeFormat": {
