--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -34,7 +34,9 @@
             "member_since": "Mitglied seit {date}"
         },
         "projects": {
-            "create": "Neues Projekt anlegen"
+            "create": "Projekt erstellen",
+            "name": "Projektname",
+            "description": "Beschreibung"
         }
     },
     "dateTimeFormat": {
