changes: - implemented redirect for logins and register - implemented validation for project creation form - removed location input in bugreporter - implemented hydration with current route and user-agent to bugreport-creation - improved layout of bugreporter dialog - improved layout of project creation dialog - improved layout of project overview - added loading of bearers profile data on app load - added default case for http error handling in axios interceptor - implemented route for project-details - implemented basic handling of invite-links - added skip for health-route in axios interceptor - added some language strings - removed some debug-outputs

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -7,10 +7,10 @@
             "cancel": "Abbrechen"
         },
         "bugreport": {
-            "title": "Report a Bug",
-            "location_question": "Where did you encounter the bug?",
-            "summary_ask": "Please summarize the bug",
-            "description_ask": "Please list the steps you took leading up to the bug"
+            "title": "Eine Fehlfunktion melden",
+            "summary_ask": "Bitte fassen Sie die Fehlfunktion zusammen:",
+            "description_ask": "Bitte zählen Sie die Schritte auf, die zur Fehlfunktion führten",
+            "thanks": "Vielen Dank für Ihre Rückmeldung"
         },
         "nav": {
             "projects": "Projekte",
@@ -36,7 +36,14 @@
         "projects": {
             "create": "Projekt erstellen",
             "name": "Projektname",
-            "description": "Beschreibung"
+            "description": "Beschreibung",
+            "confirm_creation": "Projekt erstellt"
+        },
+        "validation": {
+            "min_length": "Mindestens {min} Zeichen erforderlich.",
+            "max_length": "Maximal {max} Zeichen erlaubt.",
+            "curr_length": "{curr}/{max} Zeichen",
+            "no_special_characters": "Darf keine Sonderzeichen enthalten"
         }
     },
     "dateTimeFormat": {
