--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,15 +2,14 @@
     "dict": {
         "base": {
             "greeting": "Hello {name}!",
-            "report_bug": "Report a Bug",
             "submit": "Submit",
             "cancel": "Cancel"
         },
         "bugreport": {
             "title": "Report a Bug",
-            "location_question": "Where did you encounter the bug?",
             "summary_ask": "Please summarize the bug",
-            "description_ask": "Please list the steps you took leading up to the bug"
+            "description_ask": "Please list the steps you took leading up to the bug",
+            "thanks": "Thank you for your feedback"
         },
         "nav": {
             "projects": "Projects",
@@ -36,7 +35,14 @@
         "projects": {
             "create": "Create project",
             "name": "project name",
-            "description": "project description"
+            "description": "project description",
+            "confirm_creation": "Project created"
+        },
+        "validation": {
+            "min_length": "Must be at least {min} characters long.",
+            "max_length": "Can't be longer than {max} characters.",
+            "curr_length": "{curr}/{max} characters",
+            "no_special_characters": "Must not contain any special characters"
         }
     },
     "dateTimeFormat": {
