changes: - updated base layout - added aria-labels to bugreporter buttons - fixed layout of login-page - fixed layout of board overview page - implemented button to copy board invite links to clipboard

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -38,7 +38,9 @@
             "name": "Boardname",
             "description": "Beschreibung",
             "confirm_creation": "Board erstellt",
-            "updated_at": "Geändert am {date}"
+            "updated_at": "Geändert am {date}",
+            "copy_link": "Freigabelink kopieren",
+            "link_copied": "Link kopiert"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
