changes: - implemented card addon feature for interaction cards - implemented a context menu for card related actions - updated property management of fola card component for increased state consistency - implemented edit and create functionality on fola cards' internal editor - implemented edit and save funcitonality in fola card editor - removed unnecessary internal type variable from fola card component - implemented feature to create cards in playerCardContainer - implemented feature to add cards from players' hands - implemented feature to delete cards from players' hands - implemented feature to update cards in players' hands - implemented feature to add cards to active board - implemented feature to delete cards from active board - implemented feature to update cards on active board - some linting - added some language strings - fixed a wrong reference to language strings in collection

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -5,7 +5,11 @@
             "report_bug": "Einen Fehler melden",
             "submit": "Senden",
             "cancel": "Abbrechen",
-            "update": "Aktualisieren"
+            "create": "Erstellen",
+            "update": "Aktualisieren",
+            "delete": "Löschen",
+            "edit": "Bearbeiten",
+            "save": "Speichern"
         },
         "bugreport": {
             "title": "Eine Fehlfunktion melden",
@@ -17,7 +21,8 @@
             "boards": "Boards",
             "home": "Start",
             "profile": "Profil",
-            "collection": "Sammlung"
+            "collection": "Sammlung",
+            "visit_link": "Link besuchen"
         },
         "auth": {
             "login": "Anmelden",
@@ -43,6 +48,9 @@
             "updated_at": "Geändert am {date}",
             "copy_link": "Freigabelink kopieren",
             "link_copied": "Link kopiert"
+        },
+        "card": {
+            "external_link": "Externer Link"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
