changes: - renamed app to fola³ - added optional pick up handle in card context menu - cleaned up some references in fola card component - changed default redirect of login to /boards - implemented ability to pick up interaction cards in active board - implemented functionality to detach addons from interaction cards

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -50,7 +50,8 @@
             "link_copied": "Link kopiert"
         },
         "card": {
-            "external_link": "Externer Link"
+            "external_link": "Externer Link",
+            "pick_up": "Aufheben"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
