--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -49,7 +49,8 @@
             "link_copied": "Link copied"
         },
         "card": {
-            "external_link": "External Link"
+            "external_link": "External Link",
+            "pick_up": "Pick up"
         },
         "validation": {
             "min_length": "Must be at least {min} characters long.",
