changes: - implemented cardsets to group cards - implemented lazy loading of available cardsets in collection - implemented card creation in collection - implemented card updating in collection - implemented card deletion in collection - changed display mode of card in collection to 'view' - implemented create functionality for cards
- deprecated multi language support on user generated content (names, descriptions)
- changed get-route of cards to adhere to new api spec

- some syntax fixes

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -51,7 +51,8 @@
         },
         "card": {
             "external_link": "Externer Link",
-            "pick_up": "Aufheben"
+            "pick_up": "Aufheben",
+            "change_cardset": "Kartenset ändern"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
