changes: - implemented store module for decks - implemented fola-deck component - implemented deckmanager component - added deckmanger to collection - deprecated loadCardDetails function in store module of cards - refactored cardsets-state to have one array - added getters to cardsets-store for bearer's cardsets - some syntax fixes

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -51,7 +51,13 @@
         "card": {
             "external_link": "External Link",
             "pick_up": "Pick up",
-            "change_cardset": "change cardset"
+            "change_cardset": "change cardset",
+            "no_cards": "No cards found"
+        },
+        "deck": {
+            "no_decks": "No decks found.",
+            "new_deck": "New Deck",
+            "delete": "Delete Deck"
         },
         "validation": {
             "min_length": "Must be at least {min} characters long.",
