--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -52,7 +52,13 @@
         "card": {
             "external_link": "Externer Link",
             "pick_up": "Aufheben",
-            "change_cardset": "Kartenset ändern"
+            "change_cardset": "Kartenset ändern",
+            "no_cards": "Keine Karten"
+        },
+        "deck": {
+            "no_decks": "Keine Decks gefunden",
+            "new_deck": "Neues Deck",
+            "delete": "Deck Löschen"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
