changes: - configured port for dev-server to 3002 - added reset for player data on logout - added reset for decks on deckmanager unmount - implemented basic placeholder for cards without image links configured - implemented various properties on fola cards to configure its behaviour - implemented some form validation for card creation forms - some refactoring in fola card component - improved drag and drop for managing cards in decks - removed deprecated function from cardset store - added reset function to deck store module - added reset function to player store module - added reset function to profile store module - implemented set change for cards

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -64,7 +64,9 @@
             "min_length": "Mindestens {min} Zeichen erforderlich.",
             "max_length": "Maximal {max} Zeichen erlaubt.",
             "curr_length": "{curr}/{max} Zeichen",
-            "no_special_characters": "Darf keine Sonderzeichen enthalten"
+            "no_special_characters": "Darf keine Sonderzeichen enthalten",
+            "no_image": "Kein Bild",
+            "invalid_url": "Ungültige URL"
         },
         "errors": {
             "http": {
