changes: - updated permissions and checks to reflect changes to API - moved loadOwnPermissions to player module - implemented functionality to profile-view to display roles if present - implemented auth based functionality to update a given user's roles - removed some debug logs

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -39,7 +39,12 @@
         "profile": {
             "title": "{name}s Profil",
             "username": "Nutzername",
-            "member_since": "Mitglied seit {date}"
+            "member_since": "Mitglied seit {date}",
+            "confirm_update": "Nutzer aktualisiert."
+        },
+        "roles": {
+            "title": "Nutzerrollen",
+            "confirm_update": "Rolle aktualisiert"
         },
         "boards": {
             "create": "Board erstellen",
