changes: - reworked components in Collection to use card-ids and reference a central array in vuex - reworked components in active board to use card-ids and reference a central array in vuex - moved logic for active board data to dedicated store module - complete rework of active board store module and socketio events - implemented feature to import decks to active board - replaced copying to clipboard with quasar's built in utility - some cleanup

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -59,7 +59,8 @@
             "external_link": "Externer Link",
             "pick_up": "Aufheben",
             "change_cardset": "Kartenset ändern",
-            "no_cards": "Keine Karten"
+            "no_cards": "Keine Karten",
+            "create_card": "Karte erstellen"
         },
         "cardset": {
             "new_set": "Neues Set",
@@ -73,7 +74,11 @@
         "deck": {
             "no_decks": "Keine Decks gefunden",
             "new_deck": "Neues Deck",
-            "delete": "Deck Löschen"
+            "import_deck": "Deck importieren",
+            "delete": "Deck Löschen",
+            "ask_selection": "Bitte wählen Sie ein Deck aus",
+            "show_deckmanager": "Deckmanager einblenden",
+            "hide_deckmanager": "Deckmanager ausblenden"
         },
         "validation": {
             "min_length": "Mindestens {min} Zeichen erforderlich.",
