changes: - moved cardtype-icon in view-mode to top of card - moved cardtype-selector in edit-mode of cards to top - added labels to cardtype-options - added labels to interactionsubject-options

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -59,6 +59,9 @@
         },
         "card": {
             "external_link": "External Link",
+            "subject_teacher": "Teacher",
+            "subject_learner": "Student",
+            "subject_material": "Learning material",
             "image_url": "Image-URL",
             "pick_up": "Pick up",
             "change_cardset": "Change cardset",
