--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -60,6 +60,9 @@
         },
         "card": {
             "external_link": "Externer Link",
+            "subject_teacher": "Lehrende*r",
+            "subject_learner": "Lernende*r",
+            "subject_material": "Lernmaterial",
             "image_url": "Bild-URL",
             "pick_up": "Aufheben",
             "change_cardset": "Kartenset ändern",
