--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -22,7 +22,7 @@
             "home": "Home",
             "profile": "Profile",
             "collection": "Collection",
-            "visit_link": "Link besuchen"
+            "visit_link": "Visit external link"
         },
         "auth": {
             "login": "Login",
